<resources>
    <string name="app_name">RadioControl Telemetry</string>
    <string name="chronometer">Chronometer</string>
    <string name="races_title">Races </string>
    <string name="races_no_races">You have no races yet!</string>
    <string name="races_press_plus_icon">Press + icon to run a new race</string>
    <string name="circuits_title">Circuits</string>
    <string name="circuits_no_circuits">You have no circuits yet!</string>
    <string name="circuits_press_plus_icon">Press + icon to insert a new circuit</string>
    <string name="circuits_circuit_name">Circuit Name</string>
    <string name="circuits_circuit_city">Circuit City</string>
    <string name="circuits_circuit_length">Circuit Length Approximated </string>
    <string name="circuits_circuit_length_unit">metres</string>
    <string name="circuits_image_desc">Circuits image</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_enable">Enable</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="action_back">Back</string>
    <string name="action_next">Next</string>
    <string name="action_close">Close</string>
    <string name="action_delete">Delete</string>
    <string name="action_done">Done</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_circuits">Circuits</string>
    <string name="action_races">Races</string>
    <string name="action_wifi_settings">Wifi Settings</string>
    <string name="drawer_nav_open_message">Navigation Drawer OPENED</string>
    <string name="drawer_nav_close_message">Navigation Drawer CLOSED</string>
    <string name="drawer_nav_menu_races">RACES</string>
    <string name="drawer_nav_menu_circuits">CIRCUITS</string>
    <string name="drawer_nav_header_title">RCTelemetry</string>
    <string name="drawer_nav_header_descr">Navigate through your races and circuits</string>
    <string name="drawer_nav_image_descr">RCTelemetry logo image</string>
    <string name="failure_network_connection">No Network Connection.</string>
    <string name="failure_server_error">Server Error</string>
    <string name="failure_races_list_unavailable">Races Unavailable.</string>
    <string name="failure_circuits_list_unavailable">Circuits Unavailable.</string>
    <string name="new_race_title">New Race Data</string>
    <string name="new_race_circuit_hint">Racing Circuit</string>
    <string name="new_race_circuits_available">Available circuits</string>
    <string name="new_race_driver_hint">Name of driver</string>
    <string name="new_race_date_hint">Date of the race</string>
    <string name="empty_race_message">Circuit cannot be empty</string>
    <string name="new_race_loading_vehicles">Loading reachable vehicles....</string>
    <string name="new_race_available_vehicles">Available Vehicles</string>
    <string name="new_race_vehicle_available">Available</string>
    <string name="new_race_vehicle_blinking">Blinking</string>
    <string name="new_race_vehicle_selected">Selected</string>
    <string name="new_race_vehicle_no_response">No response</string>
    <string name="new_race_vehicle_name">Vehicle name</string>
    <string name="new_race_vehicle_address">Vehicle IP Address</string>
    <string name="new_race_no_connection_rctelemetry_network">No Connection to RCTELEMETRY network</string>
    <string name="new_race_no_connection_rctelemetry_network_message">
        Please, verify that the RCTELEMETRY_HOME device is powered on and open
        WIFI SETTINGS to connect to its network.
    </string>
    <string name="new_race_provide_circuit">Must provide a circuit name</string>
    <string name="new_race_circuit_lenght_must_be_numeric">Circuit length must be numeric</string>
    <string name="new_race_not_connected_to_home">Problems connecting to RCTELEMETRY network. Press REFRESH button to try again.</string>
    <string name="new_race_no_vehicle_detected">No vehicle found</string>
    <string name="new_race_no_vehicle_detected_message">Verify that the RCTELEMETRY module for vehicle is powered and press REFRESH button to try again</string>
    <string name="new_race_message_box">Vehicle List Message Box</string>
    <string name="rec_lap_title">Reconnaissance Lap</string>
    <string name="rec_lap_timer">00:00.0</string>
    <string name="rec_lap_start">START</string>
    <string name="rec_lap_stop">STOP</string>
    <string name="rec_lap_pref">Settings</string>
    <string name="rec_lap_pref_activity_title">Reconnaissance Lap Preferences</string>
    <string name="rec_lap_pref_instructions">Instructions</string>
    <string name="rec_lap_show_instructions_pref_key">REC_LAP_SHOW_INSTRUCTIONS_KEY</string>
    <string name="rec_lap_show_instructions_pref_title">Show Instructions</string>
    <string name="rec_lap_show_instructions_pref_summary">Show the instructions for a Reconnaissance Lap</string>
    <string name="rec_lap_pref_circuit">Circuit</string>
    <string name="rec_lap_pref_circuit_threshold_margin_key">REC_LAP_THRESHOLD_MARGIN_KEY</string>
    <string name="rec_lap_pref_circuit_threshold_margin_title">Set margin for threshold</string>
    <string name="rec_lap_pref_circuit_threshold_margin_summary">Set additional margin for Wifi signal threshold value</string>
    <string name="rec_lap_instructions_title"><u>INSTRUCTIONS</u></string>
    <string name="rec_lap_instructions_one">1. Place the vehicle on the start line</string>
    <string name="rec_lap_instructions_two">2. Press the START button and wait for the countdown to finish</string>
    <string name="rec_lap_instructions_three">3. Drive the vehicle during a complete lap</string>
    <string name="rec_lap_instructions_four">4. Press the STOP button when the vehicle crosses the finish line</string>
    <string name="rec_lap_vehicle_details">Vehicle details</string>
    <string name="rec_lap_vehicle_name">Name</string>
    <string name="rec_lap_vehicle_ip_address">IP Address</string>
    <string name="rec_lap_vehicle_wifi_strength">Wifi Strength (dBm)</string>
    <string name="rec_lap_vehicle_wifi_strength_val">----</string>
    <string name="rec_lap_circuit_threshold">Threshold</string>
    <string name="rec_lap_circuit_threshold_val">----</string>
    <string name="rec_lap_vehicle_wifi_stregth_chart">Vehicle Wifi Strength Chart</string>
    <string name="rec_lap_skip_dialog_title">Skip Reconnaissance Lap</string>
    <string name="rec_lap_skip_dialog_message">
        There is previous Reconnaissance Lap data for the selected circuit, so you can skip this step and proceed to run the race directly.
        However, it is highly recommended to do a Reconnaissance Lap for every new race. Do you really want to skip doing a Reconnaissance Lap?
    </string>
    <string name="rec_lap_countdown_number">3</string>
    <string name="vehicle_comm_error_dialog_title">Communication with vehicle failed</string>
    <string name="vehicle_comm_error_dialog_message">
        Too many failed responses from vehicle. Please, verify that the RCTelemetry module on the vehicle is powered and
        try again.
    </string>
    <string name="circuits_not_available_error_message">No circuits available in database</string>
    <string name="circuit_not_enough_data_pattern_error_dialog_title">Not enough data for Circuit pattern</string>
    <string name="circuit_not_enough_data_pattern_error_dialog_message">
        There is no enough data from vehicle RCTELEMETRY module to set a circuit pattern for finish line crossing detection.
        Please, try to repeat the reconnaissance lap.
    </string>
    <string name="circuit_not_enough_data_finish_detection_dialog_title">Finish line crossing not detected</string>
    <string name="circuit_not_enough_data_finish_detection_dialog_message">
        There is no enough data from vehicle RCTELEMETRY module for finish line crossing detection.
        Please, try to repeat the reconnaissance lap.
    </string>
    <string name="run_race_title">Run Race</string>
    <string name="run_race_vehicle_info">Vehicle Info</string>
    <string name="run_race_vehicle_strength">Wifi Strength(dBm)</string>
    <string name="run_race_vehicle_strength_val">-00.0</string>
    <string name="run_race_vehicle_threshold">Wifi Threshold</string>
    <string name="run_race_vehicle_strength_ref_val">[-00.0]</string>
    <string name="run_race_vehicle_above_threshold_count">Above Threshold Count</string>
    <string name="run_race_vehicle_above_threshold_count_val">0</string>
    <string name="run_race_vehicle_above_threshold_count_ref_val">[0]</string>
    <string name="run_race_lap_times">Lap Times</string>
    <string name="run_race_lap_number">1</string>
    <string name="run_race_lap_time">00:00.0</string>
    <string name="run_race_lap_time_diff">+0.0</string>
    <string name="run_race_no_lap_detected_error_title">No lap detected in race</string>
    <string name="run_race_no_lap_detected_error_message">
        Race will not be stored because no lap has been detected. Unless one lap has to be detected to consider the race as valid.
        Do you want to cancel actual race?
    </string>
    <string name="run_race_pref">Settings</string>
    <string name="run_race_pref_activity_title">Run Race Preferences</string>
    <string name="run_race_pref_vehicle">Vehicle</string>
    <string name="run_race_pref_vehicle_show_info_key">RUN_RACE_SHOW_VEHICLE_INFO_KEY</string>
    <string name="run_race_pref_vehicle_show_info_title">Show vehicle info</string>
    <string name="run_race_pref_vehicle_show_info_summary">Show the info provide by the vehicle for lap detection</string>
    <string name="race_details_title">Race Details</string>
    <string name="race_details_circuit">Circuit</string>
    <string name="race_details_circuit_name">Circuit Name</string>
    <string name="race_details_driver">Driver</string>
    <string name="race_details_driver_name">Driver Name</string>
    <string name="race_details_vehicle">Vehicle</string>
    <string name="race_details_vehicle_name">Vehicle Name</string>
    <string name="race_details_race_time">Race Time</string>
    <string name="race_details_best_lap">Best Lap</string>
    <string name="race_details_best_lap_vel">000.0</string>
    <string name="race_details_best_lap_vel_unit">km/h</string>
    <string name="race_details_lap_times">Lap Times</string>
    <string name="race_details_lap_number_format">1</string>
    <string name="race_details_race_time_format">00:00.0</string>
    <string name="race_details_back_press_disabled">Back press disabled for race details!!!</string>
    <string name="race_details_delete_dialog_title">Delete Race</string>
    <string name="race_details_delete_message">Are you sure you want to delete this race permanently?</string>
    <string name="circuit_details_title">Circuit Details</string>
    <string name="circuit_details_name">Circuit Name</string>
    <string name="circuit_details_city">Circuit City</string>
    <string name="circuit_details_lenght">Circuit Length (meters)</string>
    <string name="circuit_details_provide_name">Must provide a circuit name</string>
    <string name="circuit_details_delete_dialog_title">Delete Circuit</string>
    <string name="circuit_details_delete_message">
        The circuit and all the associated races will be deleted.
        Are you sure you want to delete this circuit and the associated races permanently?
    </string>
    <string name="circuit_details_coarse_location_permission_title">Permission to approximated location required</string>
    <string name="circuit_details_coarse_location_permission_message">
        Permission required to propose a candidate for the actual city circuit. If permission is denied, the city field should be
        fill in manually.
    </string>
    <string name="circuit_details_city_not_located">Could not get city from actual location</string>
</resources>