<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recLapFL"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/recLapCL"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Chronometer
            android:id="@+id/recLapChrono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textAppearance="@style/Chronometer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/vehicleSignalGV"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recLapChrono" />

        <FrameLayout
            android:id="@+id/recLapButtonsFL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicleSignalGV">

            <Button
                android:id="@+id/recLapStartButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/shape_start_button"
                android:drawableTop="@drawable/ic_start"
                android:paddingTop="0dp"
                android:text="@string/rec_lap_start"
                android:textColor="@color/colorTextIcon"
                android:visibility="visible" />

            <Button
                android:id="@+id/recLapStopButton"
                android:layout_width="100dp"
                android:layout_height="102dp"
                android:layout_gravity="center"
                android:background="@drawable/shape_stop_button"
                android:drawableTop="@drawable/ic_stop"
                android:paddingTop="0dp"
                android:text="@string/rec_lap_stop"
                android:textColor="@color/colorTextIcon"
                android:visibility="invisible" />
        </FrameLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/reclapInstructionCL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundTransp"
        android:visibility="gone">

        <TextView
            android:id="@+id/recLapInstrucTitle"
            style="@style/Instructions.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/rec_lap_instructions_title"
            app:layout_constraintBottom_toTopOf="@+id/reclapInstrucLL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/reclapInstrucLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_instructions"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/recLapInstrucOne"
                style="@style/Instructions.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rec_lap_instructions_one" />

            <TextView
                android:id="@+id/recLapInstrucTwo"
                style="@style/Instructions.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rec_lap_instructions_two" />

            <TextView
                android:id="@+id/recLapInstrucThree"
                style="@style/Instructions.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rec_lap_instructions_three" />

            <TextView
                android:id="@+id/recLapInstrucFour"
                style="@style/Instructions.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rec_lap_instructions_four" />
        </LinearLayout>

        <Button
            android:id="@+id/recLapInstructOKButton"
            style="@style/BaseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/action_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reclapInstrucLL" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>