<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/DrawerNavHeaderCL"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@color/colorAccent"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/DrawerNavHeaderImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/drawer_nav_image_descr" />

    <TextView
        android:id="@+id/DrawerNavHeaderTitle"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/drawer_nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toEndOf="@+id/DrawerNavHeaderImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DrawerNavHeaderDescription"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:lines="2"
        android:text="@string/drawer_nav_header_descr"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/DrawerNavHeaderImage"
        app:layout_constraintTop_toBottomOf="@+id/DrawerNavHeaderTitle" />
</android.support.constraint.ConstraintLayout>