<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/raceDetailsCoordLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.racedetails.RaceDetailsActivity">

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/raceDetailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/raceDetailsCircuitLbl"
                style="@style/SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/race_details_circuit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/raceDetailsCircuitLine"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/raceDetailsCircuitLbl" />

            <TextView
                android:id="@+id/raceDetailsCircuit"
                style="@style/SectionValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/race_details_circuit_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/raceDetailsCircuitLine" />

            <TextView
                android:id="@+id/raceDetailsDriverLbl"
                style="@style/SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/race_details_driver"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/raceDetailsCircuit" />

            <View
                android:id="@+id/raceDetailsDriverLine"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/raceDetailsDriverLbl" />

            <TextView
                android:id="@+id/raceDetailsDriver"
                style="@style/SectionValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/race_details_driver_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/raceDetailsDriverLine" />

            <TextView
                android:id="@+id/raceDetailsVehicleLbl"
                style="@style/SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/race_details_vehicle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/raceDetailsDriver" />

            <View
                android:id="@+id/raceDetailsVehicleLine"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/raceDetailsVehicleLbl" />

            <TextView
                android:id="@+id/raceDetailsVehicle"
                style="@style/SectionValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/race_details_vehicle_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/raceDetailsVehicleLine" />

            <TextView
                android:id="@+id/raceDetailsRaceTimeLbl"
                style="@style/SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/race_details_race_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/raceDetailsVehicle" />

            <View
                android:id="@+id/raceDetailsRaceTimeLine"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/raceDetailsRaceTimeLbl" />

            <TextView
                android:id="@+id/raceDetailsRaceTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/race_details_race_time_format"
                android:textAppearance="@style/RaceChrono"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/raceDetailsRaceTimeLine" />

            <TextView
                android:id="@+id/raceDetailsBestLapLbl"
                style="@style/SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/race_details_best_lap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/raceDetailsRaceTime" />

            <View
                android:id="@+id/raceDetailsBestLapLine"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/raceDetailsBestLapLbl" />

            <TextView
                android:id="@+id/raceDetailsBestLapNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/race_details_lap_number_format"
                android:textAppearance="@style/RaceChrono"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/raceDetailsBestLapLine" />

            <TextView
                android:id="@+id/raceDetailsBestLapTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:hint="@string/race_details_race_time_format"
                android:textAppearance="@style/RaceChrono"
                app:layout_constraintStart_toEndOf="@+id/raceDetailsBestLapNumber"
                app:layout_constraintTop_toBottomOf="@+id/raceDetailsBestLapLine" />

            <TextView
                android:id="@+id/raceDetailsBestLapVel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/race_details_best_lap_vel"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toTopOf="@+id/raceDetailsLapTimesLbl"
                app:layout_constraintEnd_toStartOf="@+id/raceDetailsBestLapVelUnit"
                app:layout_constraintTop_toBottomOf="@+id/raceDetailsBestLapLbl" />

            <TextView
                android:id="@+id/raceDetailsBestLapVelUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/race_details_best_lap_vel_unit"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toTopOf="@+id/raceDetailsLapTimesLbl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/raceDetailsBestLapLine" />

            <TextView
                android:id="@+id/raceDetailsLapTimesLbl"
                style="@style/SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/race_details_lap_times"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/raceDetailsBestLapTime" />

            <View
                android:id="@+id/raceDetailsLapTimesLine"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/raceDetailsLapTimesLbl" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/raceDetaisLapTimesRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/raceDetailsLapTimesLine" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>